--- a/My countdown/My countdown/Base.lproj/Main.storyboard
+++ b/My countdown/My countdown/Base.lproj/Main.storyboard
@@ -15,33 +15,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="jcV-1F-hnm">
-                                <rect key="frame" x="20" y="237" width="374" height="422"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="jcV-1F-hnm">
+                                <rect key="frame" x="20" y="257" width="374" height="382"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Event title" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Pqq-K6-vad">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="Mid-vh-6lz"/>
                                             <constraint firstAttribute="width" constant="374" id="suu-4J-VH7"/>
                                         </constraints>
-                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Event description" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aPD-qt-eHE">
-                                        <rect key="frame" x="0.0" y="103" width="374" height="60"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <rect key="frame" x="0.0" y="83" width="374" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="374" id="2K2-mj-dhT"/>
                                             <constraint firstAttribute="height" constant="60" id="wuB-JY-gcy"/>
                                         </constraints>
-                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="K1w-at-27q">
-                                        <rect key="frame" x="0.0" y="206" width="374" height="216"/>
+                                        <rect key="frame" x="0.0" y="166" width="374" height="216"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="216" id="PZW-VP-vOh"/>
                                             <constraint firstAttribute="width" constant="374" id="xd3-Aw-4Y7"/>
@@ -50,7 +48,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="jcV-1F-hnm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gao-IE-hJd"/>
                             <constraint firstItem="jcV-1F-hnm" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="MvL-Bj-Yit"/>
@@ -81,58 +79,59 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2c0-TL-hL4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="70" id="PYt-qC-psx" customClass="TableViewCell" customModule="My_countdown" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="70"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="EventCell" rowHeight="85" id="PYt-qC-psx" customClass="TableViewCell" customModule="My_countdown" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PYt-qC-psx" id="jrF-Oh-lai">
-                                    <rect key="frame" x="0.0" y="0.0" width="383" height="70"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="85"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYV-00-i4e">
-                                            <rect key="frame" x="20" y="39" width="269" height="31"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYV-00-i4e">
+                                            <rect key="frame" x="20" y="42" width="269" height="35"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UC4-dx-5k1">
-                                            <rect key="frame" x="20" y="0.0" width="269" height="40"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UC4-dx-5k1">
+                                            <rect key="frame" x="20" y="7" width="269" height="36"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RuE-9d-uYA">
-                                            <rect key="frame" x="297" y="0.0" width="78" height="40"/>
+                                            <rect key="frame" x="297" y="7" width="78" height="36"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="78" id="FO5-WH-Cvx"/>
+                                                <constraint firstAttribute="width" constant="78" id="QVH-Wh-W84"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="33"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="days left" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMX-Vh-h7a">
-                                            <rect key="frame" x="297" y="39" width="78" height="31"/>
+                                            <rect key="frame" x="297" y="42" width="78" height="35"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="top" secondItem="jrF-Oh-lai" secondAttribute="topMargin" constant="-11" id="1aU-7D-XOr"/>
-                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="leading" secondItem="KYV-00-i4e" secondAttribute="leading" id="3Bo-E3-hp1"/>
-                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="trailing" secondItem="jrF-Oh-lai" secondAttribute="trailingMargin" id="4C0-lx-0jZ"/>
-                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="leading" secondItem="EMX-Vh-h7a" secondAttribute="leading" id="9Ur-Ng-4wb"/>
-                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="top" secondItem="RuE-9d-uYA" secondAttribute="top" id="DPZ-Dz-9CO"/>
-                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="trailing" secondItem="KYV-00-i4e" secondAttribute="trailing" id="Dak-xT-MC3"/>
-                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="trailing" secondItem="EMX-Vh-h7a" secondAttribute="trailing" id="JMY-Y2-og1"/>
-                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="bottom" secondItem="RuE-9d-uYA" secondAttribute="bottom" id="JdZ-NM-LMy"/>
-                                        <constraint firstItem="KYV-00-i4e" firstAttribute="firstBaseline" secondItem="EMX-Vh-h7a" secondAttribute="firstBaseline" id="WEI-oq-tpO"/>
-                                        <constraint firstItem="KYV-00-i4e" firstAttribute="baseline" secondItem="EMX-Vh-h7a" secondAttribute="baseline" id="c2K-2Z-FCA"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="KYV-00-i4e" secondAttribute="bottom" constant="-11" id="wKd-qg-heJ"/>
-                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="leading" secondItem="jrF-Oh-lai" secondAttribute="leadingMargin" id="xaU-mO-gRz"/>
-                                        <constraint firstItem="KYV-00-i4e" firstAttribute="top" secondItem="jrF-Oh-lai" secondAttribute="topMargin" constant="28" id="z5L-NI-WeT"/>
-                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="leading" secondItem="UC4-dx-5k1" secondAttribute="trailing" constant="8" id="zI9-rt-ejL"/>
+                                        <constraint firstItem="KYV-00-i4e" firstAttribute="baseline" secondItem="EMX-Vh-h7a" secondAttribute="baseline" id="4vh-12-Hyg"/>
+                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="top" secondItem="jrF-Oh-lai" secondAttribute="topMargin" constant="-4" id="9ws-IU-oXW"/>
+                                        <constraint firstItem="KYV-00-i4e" firstAttribute="firstBaseline" secondItem="EMX-Vh-h7a" secondAttribute="firstBaseline" id="Dof-Mp-Phb"/>
+                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="top" secondItem="RuE-9d-uYA" secondAttribute="top" id="EDh-VY-4FN"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="UC4-dx-5k1" secondAttribute="bottom" constant="31" id="EGp-KI-3Pl"/>
+                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="leading" secondItem="KYV-00-i4e" secondAttribute="leading" id="Jll-Lc-1y5"/>
+                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="leading" secondItem="UC4-dx-5k1" secondAttribute="trailing" constant="8" id="NtV-ep-WVE"/>
+                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="leading" secondItem="EMX-Vh-h7a" secondAttribute="leading" id="P0Z-wv-LSm"/>
+                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="trailing" secondItem="jrF-Oh-lai" secondAttribute="trailingMargin" id="U72-7r-uUH"/>
+                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="leading" secondItem="jrF-Oh-lai" secondAttribute="leadingMargin" id="UWG-He-rT0"/>
+                                        <constraint firstItem="KYV-00-i4e" firstAttribute="top" secondItem="jrF-Oh-lai" secondAttribute="topMargin" constant="31" id="ZXy-W1-DOs"/>
+                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="bottom" secondItem="RuE-9d-uYA" secondAttribute="bottom" id="fkg-GM-sek"/>
+                                        <constraint firstItem="RuE-9d-uYA" firstAttribute="trailing" secondItem="EMX-Vh-h7a" secondAttribute="trailing" id="iZ7-YK-AX0"/>
+                                        <constraint firstItem="UC4-dx-5k1" firstAttribute="trailing" secondItem="KYV-00-i4e" secondAttribute="trailing" id="moR-dj-ytu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="KYV-00-i4e" secondAttribute="bottom" constant="-3" id="tzn-Xd-6Ed"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <gestureRecognizers/>
@@ -159,6 +158,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="eventsTableView" destination="2c0-TL-hL4" id="JbH-AU-j0o"/>
                         <outlet property="swipeDelete" destination="xLs-C2-FLw" id="2fK-qA-jPq"/>
                     </connections>
                 </tableViewController>
